--- a/NLP_Final_Project_QA_System.ipynb
+++ b/NLP_Final_Project_QA_System.ipynb
@@ -2360,7 +2360,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.1 Load Pre-trained Model"
+    "## 2.1 Load Pre-trained Model\n",
+    "\n",
+    "**⚠️ GitHub Codespaces Users**: Downloads can be slow. If stuck at 0%, try:\n",
+    "1. Wait 2-3 minutes (it may be downloading in background)\n",
+    "2. Interrupt (Ctrl+C) and re-run the cell\n",
+    "3. Use OPTION 2 below for faster alternative"
    ]
   },
   {
@@ -2369,15 +2374,77 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load pre-trained DistilBERT for QA\n",
+    "# OPTION 1: Load base model (recommended)\n",
+    "# Download: ~268MB - may take 2-5 minutes in Codespaces\n",
+    "\n",
     "from transformers import AutoModelForQuestionAnswering\n",
+    "import time\n",
     "\n",
-    "qa_model = AutoModelForQuestionAnswering.from_pretrained(model_checkpoint)\n",
-    "qa_model.to(device)\n",
+    "print(f\"🔄 Loading model: {model_checkpoint}\")\n",
+    "print(f\"📦 Download size: ~268MB (first time only)\")\n",
+    "print(f\"⏱️  Expected time: 2-5 minutes in Codespaces\")\n",
+    "print(f\"💡 If stuck, wait or try Ctrl+C and re-run\\n\")\n",
     "\n",
-    "print(f\"Model loaded: {model_checkpoint}\")\n",
-    "print(f\"Number of parameters: {sum(p.numel() for p in qa_model.parameters()):,}\")\n",
-    "print(f\"Trainable parameters: {sum(p.numel() for p in qa_model.parameters() if p.requires_grad):,}\")"
+    "start_time = time.time()\n",
+    "\n",
+    "try:\n",
+    "    qa_model = AutoModelForQuestionAnswering.from_pretrained(\n",
+    "        model_checkpoint,\n",
+    "        resume_download=True,\n",
+    "        cache_dir=\"./model_cache\",  # Local cache for Codespaces\n",
+    "    )\n",
+    "    qa_model.to(device)\n",
+    "    \n",
+    "    elapsed = time.time() - start_time\n",
+    "    print(f\"\\n✅ SUCCESS! Model loaded in {elapsed:.1f} seconds\")\n",
+    "    print(f\"📊 Model: {model_checkpoint}\")\n",
+    "    print(f\"🔢 Total parameters: {sum(p.numel() for p in qa_model.parameters()):,}\")\n",
+    "    print(f\"🎯 Trainable parameters: {sum(p.numel() for p in qa_model.parameters() if p.requires_grad):,}\")\n",
+    "    print(f\"💻 Device: {device}\")\n",
+    "    \n",
+    "except KeyboardInterrupt:\n",
+    "    print(\"\\n⚠️ Download interrupted. Re-run this cell to resume.\")\n",
+    "    raise\n",
+    "except Exception as e:\n",
+    "    print(f\"\\n❌ Error: {str(e)[:200]}\")\n",
+    "    print(\"\\n🔧 SOLUTIONS FOR CODESPACES:\")\n",
+    "    print(\"1. ⏸️  Wait 2-3 minutes - download may be in progress\")\n",
+    "    print(\"2. 🔄 Interrupt (Ctrl+C) and re-run this cell\")\n",
+    "    print(\"3. 🚀 Use OPTION 2 below (faster, pre-trained model)\")\n",
+    "    print(\"4. 📶 Check Codespaces network status\")\n",
+    "    raise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# OPTION 2: Use pre-fine-tuned model (FASTER for Codespaces)\n",
+    "# ⚡ Recommended if OPTION 1 is too slow\n",
+    "# Uncomment all lines below and run instead of OPTION 1\n",
+    "\n",
+    "# from transformers import AutoModelForQuestionAnswering\n",
+    "# import time\n",
+    "# \n",
+    "# # This model is already fine-tuned on SQuAD (smaller download)\n",
+    "# model_checkpoint_pretrained = \"distilbert-base-uncased-distilled-squad\"\n",
+    "# \n",
+    "# print(f\"🚀 Loading pre-fine-tuned model: {model_checkpoint_pretrained}\")\n",
+    "# print(\"⚡ This is faster and already trained on SQuAD!\\n\")\n",
+    "# \n",
+    "# start_time = time.time()\n",
+    "# qa_model = AutoModelForQuestionAnswering.from_pretrained(\n",
+    "#     model_checkpoint_pretrained,\n",
+    "#     cache_dir=\"./model_cache\"\n",
+    "# )\n",
+    "# qa_model.to(device)\n",
+    "# \n",
+    "# elapsed = time.time() - start_time\n",
+    "# print(f\"✅ Model loaded in {elapsed:.1f} seconds!\")\n",
+    "# print(f\"📊 Total parameters: {sum(p.numel() for p in qa_model.parameters()):,}\")\n",
+    "# print(\"\\n💡 Note: This model is already fine-tuned, so further training will refine it\")"
    ]
   },
   {
